tests/snapshots/index_origin_min_overflow.snap
---
source: tests/fault_snapshots.rs
---
program: index_origin_min_overflow.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: the 1-origin shift computes -9223372036854775808 - 1, and no int holds it
at:      24:13 `xs[i]`
because: (single-span fault)
