tests/snapshots/l2_dangling.snap
---
source: tests/prov_machine.rs
---
program:   l2_dangling.lu
verdict:   ub(mem.ub)
row:       §7/L2
clause:    [mem.unsafe.raw.1]
what:      deref of a dangling raw pointer
licenses:  O8: escape analysis / stack promotion without conservatively pinning addresses
message:   read through an exposed pointer into alloc#0, which was freed
access:    `q[0]`
tag from:  `c.malloc(8)`
tree:
  alloc#0 `c.malloc(8)` 8 byte(s), FREED, owned by region #0
    tag#0 c.malloc(8)#root Disabled exposed
